# systems-archetecture-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  book.c  book.h  build_project  io.c  io.h  my_book_manager.c  my_book_manager.h  progress.md  run
src/: CMakeLists.txt  autosave.c  autosave.h  book.c  book.h  io.c  io.h  multiproc.c  multiproc.h  my_book_manager.c  my_book_manager.h
tests/: CMakeLists.txt  book_tests.c  io_tests.c  tests.c  tests.h
valgrind_tests/: insert_five  insert_five_corrupt_authors  insert_five_save  insert_five_save_load  insert_one  insert_one_save  insert_one_save_load  lots_of_wrong_numbers  modify_first_from_five_by_id  non_numbers  remove_all_from_five_by_id  remove_one_from_five_by_id  run_test  show_all_from_five_by_id
